--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -24,7 +24,7 @@
         <div class="bg-white p-8 shadow-md rounded-lg max-w-md w-full">
 
             <!-- form -->
-            <form class="space-y-4" action="/resetPassword" method="POST">
+            <form class="space-y-4" id="resetPasswordForm" action="/resetPassword" method="POST">
                 <input type="hidden" name="token" value="<%= token %>">
                 <h2 class="text-xl font-semibold">Reset Password</h2>
                 <div>
@@ -40,5 +40,43 @@
             
         </div>  
     </div>
+    <script>
+       
+        document.addEventListener('DOMContentLoaded', () => {
+                const resetPasswordForm = document.getElementById('resetPasswordForm');
+                
+                
+                resetPasswordForm.addEventListener('submit', async (event) => {
+                    event.preventDefault(); 
+    
+                    const formData = new URLSearchParams(new FormData(resetPasswordForm));
+                    
+    
+                    try {
+                        const response = await fetch('/resetPassword', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/x-www-form-urlencoded'
+                            },
+                            body: formData
+                        });
+                
+                        if (response.ok) {
+                            alert('Password has been reset successfully');
+                            
+                            
+                        } else {
+                            const errorMessage = await response.text();
+                            alert(errorMessage);
+                        }
+                    } catch (error) {
+                        console.error('Error resetting password', error);
+                         alert('Error login in');
+                        
+                    }
+                });
+            });
+        
+    </script>
 </body>
 </html>
